welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:10: error: not found: value i
  return i
         ^